# firsttest_of_work_practice

./: CMakeLists.txt
include/: binary_tree.h  heap.h  queue.h
src/: binary_tree.cpp  heap.cpp  queue.cpp
tests/: binary_tree_test.cpp  heap_test.cpp  queue_test.cpp
